# tinkoffsdk_qt_app

./: .gitignore  CMakeLists.txt  README.md  ex  ex.cpp  statistics.db
apps/: CMakeLists.txt  CMakeLists.txt.user.55d48d9  README.md  akcii.cpp  akcii.h  akcii.ui  dialog.cpp  dialog.h  dialog.ui  favouritesModel.cpp  favouritesModel.h  favouritesProxyModel.cpp  favouritesProxyModel.h  figi.cpp  figi.h  figi.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portfolio.cpp  portfolio.h  portfolio.ui  shareinfowindow.cpp  shareinfowindow.h  window1.cpp  window1.h  window1.ui  window2.cpp  window2.h
cmake/: common.cmake
docs/: CMakeLists.txt  CMakeLists.txt.autosave  mainpage.md
include/homepage/: homepage.h
include/invest/: example.h
include/shares/: shares.h
include/statistics/: statistics.h
include/welcome/: welcome.h
src/: CMakeLists.txt
src/homepage/: homepage.cpp  homepage2.cpp
src/invest/: example.cpp
src/shares/: shares.cpp  shares.ui
src/statistics/: statistics.cpp
src/welcome/: welcome.cpp  welcome.ui
tests/: CMakeLists.txt  ctest.cpp  test.cpp
ui/: mainwindow.ui
